[tool.poetry]
name = "auto-gpt-stock"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://yourprojecthomepage.com"
repository = "https://github.com/yourusername/yourproject"

[tool.poetry.dependencies]
python = "^3.11"
akshare = "^1.15.54"
pydantic = "^2.10.4"
langchain = "^0.3.13"
langchain-core = "^0.3.28"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-experimental = "^0.3.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"